--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html>>
-<html>
+<!DOCTYPE html>
 
+<html>
+    <head>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+
+        <script src="index.pack.js"></script>
+    </body>
 </html>
