--- a/crew-commander.html
+++ b/crew-commander.html
@@ -1,27 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
+    rel="stylesheet">
+
+  <!-- Our custom CSS -->
+  <link rel="stylesheet" href="index.css">
+
   <title>Frontend Mentor | Space tourism website</title>
+
+  <script src="index.js" defer></script>
 </head>
+
 <body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+  <header class="primary-header flex">
+    <div>
+      <img src="./assets/shared/logo.svg" alt="space tourism logo" class="logo">
+    </div>
+    <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
+    <nav>
+        <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
+            <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span aria-hidden="true">00</span>Home</a>
+            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span aria-hidden="true">01</span>Destination</a>
+            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span aria-hidden="true">02</span>Crew</a>
+            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span aria-hidden="true">03</span>Technology</a>
+        </ul>
+    </nav>
+  </header>
 
-  02 Meet your crew
+  <main id="main" class="grid-container grid-container--destination flow">
+    <h1 class="crew-numbered-title"><span aria-hidden="true">02</span> Meet your crew</h1>
 
-  Commander
-  Douglas Hurley
+    <div class="crew-image-container flex">
+      <img class="crew-image" src="assets/crew/image-douglas-hurley.png" alt="Douglas Hurley">
+    </div>
 
-  Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-  and former NASA astronaut. He launched into space for the third time as 
-  commander of Crew Dragon Demo-2.
+    <div class="dot-indicators flex">
+      <button aria-selected="true"><span class="sr-only">Slide title</span></button>
+      <button aria-selected="false"><span class="sr-only">Slide title</span></button>
+      <button aria-selected="false"><span class="sr-only">Slide title</span></button>
+      <button aria-selected="false"><span class="sr-only">Slide title</span></button>
+  </div>
+
+    <article class="crew-info flex">
+      <h2 class="fs-400 uppercase ff-serif" style="color: hsl( var(--clr-white) / .5);">Commander</h2>
+      <h3 class="fs-700 uppercase ff-serif">Douglas Hurley</h3>
+
+      <div class="crew-meta">
+        <div>
+          <p class="text-accent fs-400">Douglas Gerald Hurley is an American engineer, 
+            former Marine Corps pilot and former NASA astronaut. He launched into space 
+            for the third time as commander of Crew Dragon Demo-2.</p>
+      </div>
+      
+    </article>
+  </main>
 </body>
+
 </html>
